# hs-hangman

./: hangman.cabal
src/: Main.hs
